# MyEQ

./: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  README.md
build-ninja/: CMakeCache.txt
